# iplayerDL

./: .gitignore  README.md  config.toml  pyproject.toml  urls.toml
src/iplayerdl/: __init__.py  classes.py  config_loader.py  download.py  file_move.py  fix_perms.py  info.py  main.py  ntfy.py  subtitles.py  transcode.py
