[project]
name = "iplayerdl"
version = "0.1.0"
description = "Wrapper around yt-dlp and ffmpeg for BBC iPlayer"
readme = "README.md"
authors = [
    { name = "Sam Tee", email = "93236986+sam-tee@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dacite>=1.9.2",
    "dotenv>=0.9.9",
    "ffmpeg>=1.4",
    "pycryptodomex>=3.23.0",
    "pysubs2>=1.8.1",
    "tmdbv3api>=1.9.0",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["uv_build>=0.11.4,<0.12.0"]
build-backend = "uv_build"
